[project]
name = "emu-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
    "fastapi>=0.116.1",
    "fastmcp[client]>=2.12.0",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
